SFDC/SFDC Tution/src/objects/DRT_Sidebar__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Display&apos;s on Sidebar values.</description>
    <fields>
        <fullName>Header_Index__c</fullName>
        <label>Header Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Header_Label__c</fullName>
        <label>Header Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <defaultValue>&apos;DRT&apos;</defaultValue>
        <label>Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Label__c</fullName>
        <label>Page Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Header_Index__c</fullName>
        <label>Sub-Header Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DRT_Sidebar</label>
</CustomObject>